# Sukebe

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: binaries.yml
examples/: basic.rs
src/: cli.rs  client.rs  lib.rs  main.rs  models.rs
