[package]
name = "sukebe"
version = "1.0.2"
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scraper = "0.12.0"
reqwest = { version = "0.11.3", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1.23.1", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
structopt = "0.3.21"
futures = "0.3.15"
anyhow = "1.0.41"
serde_json = "1.0.64"
