[package]
name = "sukebe"
version = "1.0.3"
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scraper = "0.12.0"
reqwest = { version = "0.11.16", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
structopt = "0.3.26"
futures = "0.3.28"
anyhow = "1.0.70"
serde_json = "1.0.96"
