[package]
name = "sukebe"
version = "1.0.3"
authors = ["Alex Nørgaard <Umbra@AbstractUmbra.xyz>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.13.2", features = [
    "json",
    "stream",
    "rustls",
], default-features = false }
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
eos = { git = "https://github.com/Rapptz/eos.git", features = ["serde"] }
futures = "0.3.32"
anyhow = "1.0.102"
serde_json = "1.0.149"
moka = { version = "0.12", features = ["future"] }
rand = "0.10.1"
